[package]
name = "nimbus-consensus"
description = "Client-side worker for the Nimbus family of slot-based consensus algorithms"
version = "0.1.0"
edition = "2018"

[dependencies]
# Axlib deps
sp-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-inherents = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-blockchain = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-block-builder = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-client-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-consensus-manual-seal = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
axlib-prometheus-endpoint = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-keystore = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-application-crypto = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-std = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

# Axia dependencies
axia-client = { git = "https://github.com/AXIA-DEV/axia", branch = "master", default-features = false }

# Cumulus dependencies
cumulus-client-consensus-common = { git = "https://github.com/AXIA-DEV/axianetwork-cumulus", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/AXIA-DEV/axianetwork-cumulus", branch = "master" }
cumulus-primitives-allychain-inherent = { git = "https://github.com/AXIA-DEV/axianetwork-cumulus", branch = "master" }

# Nimbus Dependencies
nimbus-primitives = { path = "../nimbus-primitives" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
tracing = "0.1.22"
async-trait = "0.1.42"
parking_lot = "0.9"
log = "0.4"
