[package]
name = "allychain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Axlib Node, ready for hacking together a allychain."
license = "Unlicense"
homepage = "https://axlib.dev"
repository = "https://github.com/paritytech/cumulus/"
edition = "2018"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
axlib-build-script-utils = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

[[bin]]
name = "allychain-collator"
path = "src/main.rs"

[features]
runtime-benchmarks = ["allychain-template-runtime/runtime-benchmarks"]

[dependencies]
derive_more = "0.99.2"
log = "0.4.14"
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.8"
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.3.1"

# RPC related Dependencies
jsonrpc-core = "18.0.0"

# Local Dependencies
allychain-template-runtime = { path = "../runtime" }
nimbus-primitives = { path = "../../nimbus-primitives"}
nimbus-consensus = { path = "../../nimbus-consensus"}

# Axlib Dependencies
frame-benchmarking = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

pallet-transaction-payment-rpc = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

axlib-frame-rpc-system = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
axlib-prometheus-endpoint = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

## Axlib Client Dependencies
sc-basic-authorship = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-chain-spec = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-cli = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-client-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-consensus-manual-seal = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-executor = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-network = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-keystore = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-rpc = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-rpc-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-service = { git = "https://github.com/AXIA-DEV/axlib-axtend", features = ["wasmtime"] , branch = "master" }
sc-telemetry = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-transaction-pool = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-tracing = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

## Axlib Primitive Dependencies
sp-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-block-builder = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-blockchain = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
#sp-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-inherents = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-keystore = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-offchain = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-session = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-timestamp = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-transaction-pool = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/AXIA-DEV/axianetwork-cumulus", branch = "master" }
cumulus-client-collator = { git = "https://github.com/AXIA-DEV/axianetwork-cumulus", branch = "master" }
cumulus-client-consensus-common = { git = "https://github.com/AXIA-DEV/axianetwork-cumulus", branch = "master" }
cumulus-client-network = { git = "https://github.com/AXIA-DEV/axianetwork-cumulus", branch = "master" }
cumulus-client-service = { git = "https://github.com/AXIA-DEV/axianetwork-cumulus", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/AXIA-DEV/axianetwork-cumulus", branch = "master" }
cumulus-primitives-allychain-inherent = { git = "https://github.com/AXIA-DEV/axianetwork-cumulus", branch = "master" }

# Axia dependencies
axia-cli = { git = "https://github.com/AXIA-DEV/axia", branch = "master" }
axia-allychain = { git = "https://github.com/AXIA-DEV/axia", branch = "master" }
axia-primitives = { git = "https://github.com/AXIA-DEV/axia", branch = "master" }
axia-service = { git = "https://github.com/AXIA-DEV/axia", branch = "master" }
axia-test-service = { git = "https://github.com/AXIA-DEV/axia", branch = "master" }
